--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Playlist – Dome</title>
+  <title>La mia Pl.A.I.list</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Playlist di Dome</h1>
+    <h1>La mia Pl.A.I.list</h1>
 
     <div id="currentTrackContainer">
       <div class="cover-wrapper">
@@ -36,3 +36,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
