Add draft toggle feature
Added a toggle for showing drafts in the playlist.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       <span id="statusText">Pronto</span>
     </div>
 
+    <!-- Toggle Drafts -->
+    <div class="draft-toggle">
+      <label>
+        <input type="checkbox" id="showDraftsChk">
+        Show Drafts
+      </label>
+    </div>
+
     <h3>Brani</h3>
     <ul id="trackList"></ul>
   </div>
@@ -42,3 +50,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
