Add prev/next buttons to audio player
Added UI controls for previous and next track functionality.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <!-- [4] PLAYER AUDIO -->
     <audio id="audioPlayer" controls></audio>
 
+    <!-- [4.1] CONTROLLI UI PREV/NEXT -->
+    <div class="transport">
+      <button id="prevBtn" class="transport-btn" aria-label="Previous track">⏮ Prev</button>
+      <button id="nextBtn" class="transport-btn" aria-label="Next track">Next ⏭</button>
+    </div>
+
     <!-- [5] STATUS BAR (loading/buffering) -->
     <div id="statusBar" class="status-bar">
       <div class="spinner" id="spinner"></div>
@@ -60,6 +66,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
