Enhance lyrics display with prev/next sections
Updated lyrics container to include previous and next lyrics sections.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       <div class="info">
         <h2 id="currentTitle"></h2>
 
-        <!-- [3.2.1] LYRICS CONTAINER -->
+        <!-- [3.2.1] LYRICS CONTAINER (prev / current / next) -->
         <div id="lyricsContainer" class="lyrics-container">
-          <div id="currentLyric" class="current-lyric">
+          <div id="prevLyric" class="lyric-line lyric-prev"></div>
+          <div id="currentLyric" class="lyric-line lyric-current">
             Testo non disponibile
           </div>
+          <div id="nextLyric" class="lyric-line lyric-next"></div>
         </div>
       </div>
     </div>
@@ -73,4 +75,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
