--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
   <!-- [1] HEAD / META -->
+  <link rel="icon" href="./favicon.ico">
   <meta charset="UTF-8">
   <title>Playlist – Dome</title>
   <link rel="stylesheet" href="style.css">
@@ -75,3 +76,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
