--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- [1] HEAD / META -->
   <link rel="icon" href="./favicon.ico">
   <meta charset="UTF-8">
-  <title>Playlist – Dome</title>
+  <title>Project "fantaMai"</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -76,4 +76,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
