Fix HTML structure and update project title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- [2] CONTAINER PRINCIPALE -->
   <div class="container">
-    <h1>Playlist di Dome</h1>
+    <h1>Project "fantaMai"</h1>
 
     <!-- [3] BLOCCO CANZONE CORRENTE -->
     <div id="currentTrackContainer">
@@ -76,5 +76,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
