--- a/index.html
+++ b/index.html
@@ -1,91 +1,119 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-  <!-- [1] HEAD / META -->
-  <link rel="icon" href="./favicon.ico">
   <meta charset="UTF-8">
-  <title>Project "fantaMai"</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Site Moved - FantaMai Player</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4DTN0VSWTV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-4DTN0VSWTV');
-  </script>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .container {
+      text-align: center;
+      max-width: 500px;
+      width: 100%;
+    }
+
+    .logo {
+      width: 200px;
+      height: 200px;
+      margin: 0 auto 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+      animation: fadeIn 0.8s ease-out;
+    }
+
+    h1 {
+      font-size: 28px;
+      font-weight: 600;
+      margin-bottom: 20px;
+      color: #fff;
+      animation: fadeIn 1s ease-out 0.2s both;
+    }
+
+    p {
+      font-size: 18px;
+      color: #ccc;
+      margin-bottom: 30px;
+      animation: fadeIn 1s ease-out 0.4s both;
+    }
+
+    .link {
+      display: inline-block;
+      background: rgba(227, 139, 31, 0.9);
+      color: #fff;
+      text-decoration: none;
+      padding: 15px 40px;
+      border-radius: 50px;
+      font-size: 18px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      box-shadow: 0 5px 20px rgba(227, 139, 31, 0.3);
+      animation: fadeIn 1s ease-out 0.6s both;
+    }
+
+    .link:hover {
+      background: rgba(227, 139, 31, 1);
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(227, 139, 31, 0.4);
+    }
+
+    .link:active {
+      transform: translateY(0);
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .logo {
+        width: 150px;
+        height: 150px;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+
+      .link {
+        font-size: 16px;
+        padding: 12px 30px;
+      }
+    }
+  </style>
 </head>
-
 <body>
-  <!-- [2] CONTAINER PRINCIPALE -->
   <div class="container">
-    <h1>Project "fantaMai"</h1>
-
-    <!-- [3] BLOCCO CANZONE CORRENTE -->
-    <div id="currentTrackContainer">
-
-      <!-- [3.1] COVER + ONDE -->
-      <div class="cover-wrapper">
-        <img id="currentCover" src="" alt="Cover">
-
-        <!-- Onde radio animate -->
-        <div class="waves-overlay">
-          <svg class="waves" viewBox="0 0 1200 200" preserveAspectRatio="none">
-            <path d="M0 100 Q300 20 600 100 T1200 100" />
-          </svg>
-        </div>
-      </div>
-
-      <!-- [3.2] INFO + LYRICS -->
-      <div class="info">
-        <h2 id="currentTitle"></h2>
-
-        <div id="lyricsContainer" class="lyrics-container">
-          <div id="prevLyric" class="lyric-line lyric-prev"></div>
-          <div id="currentLyric" class="lyric-line lyric-current">
-            Testo non disponibile
-          </div>
-          <div id="nextLyric" class="lyric-line lyric-next"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- [4] PLAYER AUDIO -->
-    <audio id="audioPlayer" controls></audio>
-
-    <!-- [4.1] CONTROLLI UI PREV/NEXT + DOWNLOAD -->
-    <div class="transport">
-      <button id="prevBtn" class="transport-btn">⏮ Prev</button>
-      <button id="downloadBtn" class="transport-btn">⬇ Download</button>
-      <button id="nextBtn" class="transport-btn">Next ⏭</button>
-    </div>
-
-    <!-- [5] STATUS BAR -->
-    <div id="statusBar" class="status-bar">
-      <div class="spinner" id="spinner"></div>
-      <span id="statusText">Pronto</span>
-    </div>
-
-    <!-- [6] TOGGLE DRAFTS -->
-    <div class="draft-toggle">
-      <label>
-        <input type="checkbox" id="showDraftsChk">
-        Show Drafts
-      </label>
-    </div>
-
-    <!-- [7] PLAYLIST -->
-    <h3>Brani</h3>
-    <ul id="trackList"></ul>
+    <img src="covers/nosong.png" alt="FantaMai Player" class="logo">
+    <h1>This website has been moved</h1>
+    <p>Please visit our new location to continue listening</p>
+    <a href="https://nikofanta.github.io/fantamai-player/" class="link">Go to New Site</a>
   </div>
-
-  <!-- [8] SCRIPT -->
-  <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
