--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <img src="covers/nosong.png" alt="FantaMai Player" class="logo">
     <h1>This website has been moved</h1>
     <p>Please visit our new location to continue listening</p>
-    <a href="https://nikofanta.github.io/fantamai-player/" class="link">Go to New Site</a>
+    <a href="https://fantamai.com/" class="link">Go to New Site</a>
   </div>
 </body>
 </html>
+
